<resources>
    <string name="app_name">School Sound Editor</string>
    <string name="equalizer_item">Equalizer</string>
    <string name="record_item">Record</string>
    <string name="playback_item">Воспроизведение</string>
    <string name="main_screen_item">Главный экран</string>
    <string name="text_for_stopwatch">00:00:00</string>
    <string name="save_item_description">Сохранить</string>
    <string name="record_item_description">Запись</string>
    <string name="play_record_item_description">Прослушать</string>
    <string name="settings_item_description">Настройки</string>
    <string name="some_parameter_1">some parameter 1</string>
    <string name="some_parameter_4">some parameter 4</string>
    <string name="some_parameter_3">some parameter 3</string>
    <string name="some_parameter_2">some parameter 2</string>
    <string name="load_item">Добавить</string>
    <string name="file_item">Файл</string>
    <string name="redactor_item">Ред.</string>
    <string name="view_item">Вид</string>
    <string name="input_item">Вставка</string>
    <string name="track_item">Трек</string>
    <string name="effects_item">Эфф.</string>
    <string name="default_track_name">Bohemian Rhapsody</string>
    <string name="default_track_duration">5:55</string>
    <string name="default_track_format">Mp3</string>
    <string name="default_track_performer">Queen</string>
    <string name="track_image_description">here will be track image</string>
    <string name="header_text">Добавьте или запишите звук</string>
    <string name="movie_image_description">here will be movie image</string>
    <string name="default_movie_name">Modern Times</string>
    <string name="default_movie_producer">Charlie Chaplin</string>
    <string name="default_movie_duration">87 min</string>
    <string name="default_movie_format">avi</string>
    <string name="starring_text_header">Starring:</string>
    <string name="starring_text">Charles Chaplin\nPaulette Goddard</string>
    <string name="item_image_description">here will be item image</string>
    <string name="move_up_description">move up</string>
    <string name="move_down_description">move down</string>
    <string name="remove_description">remove</string>
    <string name="zero_tv_audio_current_position">00:00</string>
    <string name="save">Save</string>
    <string name="cancel">Отмена</string>
    <string name="_0_00">0:00</string>
    <string name="trim">Trim:</string>
    <string name="loop">Loop:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="looped_file_path">sdcard/mp4Test/mergedFile</string>
    <string name="upload">Готово</string>
    <string name="trim_button_text">Обрезать</string>
    <string name="edit_text_view">Редактирование</string>
    <string name="reset_text_view">Заново</string>
    <string name="done_text_view">Готово</string>
    <string name="info_button_description">Справка</string>
    <string name="previousPageButtonText">Назад</string>
    <string name="nextPageButtonText">Далее</string>
    <string name="dismissButtonText">Закрыть</string>
    <string name="title_text">ТЕОРЕТИЧЕСКИЙ МАТЕРИАЛ</string>
    <string name="help_page0_text">На сегодняшний день мобильные устройства с соответствующим приложением позволяют знающему человеку делать со звуком самые невероятные вещи: создавать свою музыку из готовых звуковых фрагментов, накладывать любые спецэффекты, заставить музыку звучать «из-под воды», менять свой голос с мужского на женский или с женского на мужской, петь свои песни голосом любимых исполнителей, озвучивать животных, имитировать звуки толпы или переделать симфонию Чайковского в бит для рэпа – и всё это можно сделать на мобильном устройстве благодаря звуковым редакторам – приложениям для обработки звука на мобильных устройствах.</string>
    <string name="help_page1_text">School Sound Editor – это мобильное приложение, предоставляющее возможность записывать, редактировать, обрабатывать звуковые файлы, склеивать их вместе и накладывать спецэффекты. С помощью приложения вы сможете создать своё школьное радио, записывать и обрабатывать свою музыку, обработать звук для тиктока, записать аудиосказку, создать плейлист в одном файле или изменить свой голос до неузнаваемости. Умение качественно обрабатывать звук откроет перед вами путь к профессиям звукооператора и звукорежиссёра – без них не обходится ни один крупный проект.</string>
    <string name="help_page2_text">Самое главное при этом – помнить про авторское право. У любого произведения есть автор, а значит, и авторские права. Обнародовав свою композицию, музыкант разрешает использовать её в домашних условиях. Но когда речь идет об использовании этой музыки для извлечения выгоды, ситуация меняется. Внедрение трека в коммерческие проекты запрещено, и дает правообладателю основание для подачи в суд.</string>
    <string name="help_page3_text">Аудиофайл (файл, содержащий звукозапись) — файл, состоящий из информации об амплитуде и частоте звука, сохранённый на устройстве.
\n \n Амплитуда характеризует громкость звука, измеряемую в децибелах (дБ). Человек в среднем способен воспринимать звук от 10-15 дБ до 120-130 дБ (болевой порог).
</string>
    <string name="help_page4_text">Частота – количество колебаний звуковой волны в единицу времени. Единицей измерения частоты в мировой системе СИ является герц (гЦ). Человек воспринимает звуковые волны в диапазоне от 20 Гц до 20000 Гц.
\n \n Дискретизация – процесс преобразования непрерывного сигнала в дискретный. Под частотой дискретизации следует понимать частоту взятия отсчетов непрерывного во времени сигнала при его дискретизации. Для того, чтобы без потерь дискретизировать любой звук, который может услышать человек, используют частоту дискретизации более 40 кГц (40 тыс. Гц)
</string>
    <string name="help_page5_text">Разрядность – количество бит в памяти устройства, которое выделяется на 1 отсчёт амплитуды сигнала. При разрядности 2 бита возможно зафиксировать 4 уровня громкости, при разрядности 3 бита – 8 уровней, при разрядности 4 бита – 16 уровней и т.д. Для получения записи хорошего качества обычно используют разрядность 16 бит и более.
\n \n Количество каналов звука: моно (1 канал), стерео (2 канала), квадро (4 канала).
</string>
    <string name="help_page6_text">Расширение аудиофайла (формат) - формат представления звуковых данных, используемый при цифровой звукозаписи. На текущий момент самыми распространёнными форматами являются: MP3, AAC, WMA, FLAC, ALAC, WAV, AIFF, PCM и др.</string>
    <string name="help_page7_text">Формат MP3: был создан организацией Moving Pictures Experts Group (MPEG), которая создавала и до сих пор создаёт стандарты для хранения и передачи звука и видео в цифровом виде. В полном виде формат называется: MPEG-1/MPEG-2 Layer 3 (MP3). На сегодня это самый популярный формат для хранения музыки в мире.</string>
    <string name="help_page8_text">MP3 одновременно сжимает данные и обрабатывает звук, чтобы получить минимальный возможный размер файла. Смысл обработки исходной записи алгоритмом сжатия в MP3 заключается в сжатии информации до минимально возможной. Так, если в оригинальном виде песня занимает около 70 Мб памяти, то в формате MP3 с приемлемым качеством она будет занимать всего около 7–8 Мб, однако это достигается за счёт ухудшения качества звучания.</string>
    <string name="help_page9_text">УДАЧИ!</string>
</resources>
