<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/file_item"
        android:title="@string/file_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/redactor_item"
        android:title="@string/redactor_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/view_item"
        android:title="@string/view_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/input_item"
        android:title="@string/input_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/track_item"
        android:title="@string/track_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/effects_item"
        android:title="@string/effects_item"
        app:showAsAction="always"/>
</menu>