<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageButton
        android:id="@+id/btnRecord"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/circular_record_button_green"
        android:gravity="bottom|center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRecordText"
        android:layout_gravity="center"
        android:gravity="bottom|center_horizontal"
        android:text="@string/_0_00" />

    <LinearLayout
        android:id="@+id/llRecorded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveRecorded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnCancelRecorded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>